Add 5 more popular converter pages (WEBP to PNG, MOV to MP4, WAV to MP3, Word to PDF, Excel to PDF) and link them

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -380,13 +380,13 @@
                         <h3>PNG to JPG</h3>
                         <p>Convert PNG images to JPG format</p>
                     </a>
-                    <div class="converter-card">
+                    <a href="webp-to-png.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
                         </div>
                         <h3>WEBP to PNG</h3>
                         <p>Convert WEBP to PNG format</p>
-                    </div>
+                    </a>
                     <div class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
@@ -474,13 +474,13 @@
                         <h3>MP4 to AVI</h3>
                         <p>Convert MP4 videos to AVI format</p>
                     </a>
-                    <div class="converter-card">
+                    <a href="mov-to-mp4.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-video"></i>
                         </div>
                         <h3>MOV to MP4</h3>
                         <p>Convert MOV to MP4 format</p>
-                    </div>
+                    </a>
                     <div class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-film"></i>
@@ -575,13 +575,13 @@
                         <h3>MP3 to WAV</h3>
                         <p>Convert MP3 to WAV format</p>
                     </a>
-                    <div class="converter-card">
+                    <a href="wav-to-mp3.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-music"></i>
                         </div>
                         <h3>WAV to MP3</h3>
                         <p>Convert WAV to MP3 format</p>
-                    </div>
+                    </a>
                     <div class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-headphones"></i>
@@ -676,20 +676,20 @@
                         <h3>PDF to Word</h3>
                         <p>Convert PDF to editable Word</p>
                     </a>
-                    <div class="converter-card">
+                    <a href="word-to-pdf.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-word"></i>
                         </div>
                         <h3>Word to PDF</h3>
                         <p>Convert Word documents to PDF</p>
-                    </div>
-                    <div class="converter-card">
+                    </a>
+                    <a href="excel-to-pdf.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-excel"></i>
                         </div>
                         <h3>Excel to PDF</h3>
                         <p>Convert Excel to PDF format</p>
-                    </div>
+                    </a>
                     <div class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-powerpoint"></i>
