--- a/frontend/png-to-jpg.html
+++ b/frontend/png-to-jpg.html
@@ -318,6 +318,20 @@
     <!-- Main Container -->
     <div class="main-container">
         <div class="content">
+            <!-- Ad Slot 1: Header Leaderboard (728x90) -->
+            <div class="ad-header">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:728px;height:90px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="1234567890"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+            
             <!-- Header -->
             <div class="converter-header">
                 <h1>PNG to JPG Converter</h1>
@@ -337,6 +351,20 @@
                 <i class="fas fa-sync-alt"></i> Convert to JPG
             </button>
 
+            <!-- Ad Slot 2: In-Content Rectangle (336x280) -->
+            <div class="ad-in-content">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:336px;height:280px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="0987654321"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+
             <!-- Features -->
             <div class="features">
                 <div class="feature-card">
@@ -353,6 +381,20 @@
                     <i class="fas fa-download"></i>
                     <h4>Instant Download</h4>
                     <p>Download your converted files immediately</p>
+                </div>
+            </div>
+            
+            <!-- Ad Slot 3: Footer Leaderboard (728x90) -->
+            <div class="ad-footer">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:728px;height:90px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="1122334455"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </div>
             </div>
         </div>
