--- a/frontend/word-to-pdf.html
+++ b/frontend/word-to-pdf.html
@@ -318,7 +318,21 @@
     <!-- Main Container -->
     <div class="main-container">
         <div class="content">
-            <!-- Header -->
+            <!-- Ad Slot 1: Header Leaderboard (728x90) -->
+            <div class="ad-header">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:728px;height:90px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="1234567890"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+            
+<!-- Header -->
             <div class="converter-header">
                 <h1>Word to PDF Converter</h1>
                 <p>Convert Microsoft Word documents to PDF format</p>
@@ -337,7 +351,21 @@
                 <i class="fas fa-sync-alt"></i> Convert to PDF
             </button>
 
-            <!-- Features -->
+            <!-- Ad Slot 2: In-Content Rectangle (336x280) -->
+            <div class="ad-in-content">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:336px;height:280px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="0987654321"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+
+<!-- Features -->
             <div class="features">
                 <div class="feature-card">
                     <i class="fas fa-lock"></i>
@@ -355,10 +383,24 @@
                     <p>Your files are processed securely</p>
                 </div>
             </div>
-        </div>
-    </div>
+            
+            <!-- Ad Slot 3: Footer Leaderboard (728x90) -->
+            <div class="ad-footer">
+                <div class="ad-container">
+                    <div class="ad-label">Advertisement</div>
+                    <ins class="adsbygoogle"
+                         style="display:inline-block;width:728px;height:90px"
+                         data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
+                         data-ad-slot="1122334455"></ins>
+                    <script>
+                         (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
+                </div>
+            </div>
+</div>
+</div>
 
-    <script>
+<script>
         // Premium User Detection (Add this to check membership status)
         function checkPremiumStatus() {
             // Example: Check if user has premium membership
