Update converters.html: Add links to 3 new image converter pages (PNG to PDF, JPG to PDF, WEBP to JPG)

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -499,6 +499,27 @@
                         <h3>WEBP to PNG</h3>
                         <p>Convert WEBP to PNG format</p>
                     </a>
+                    <a href="webp-to-jpg.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3>WEBP to JPG</h3>
+                        <p>Convert modern WEBP to standard JPG</p>
+                    </a>
+                    <a href="png-to-pdf.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>PNG to PDF</h3>
+                        <p>Convert PNG images to PDF documents</p>
+                    </a>
+                    <a href="jpg-to-pdf.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>JPG to PDF</h3>
+                        <p>Convert JPG images to PDF documents</p>
+                    </a>
                     <div class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
