Add 17 new image converters with glassmorphism design and AdSense integration
- Added popular converters: GIF to PNG, HEIF to PNG, AVIF to JPG, TIF to PNG, SVG to JPG
- Added icon converters: PNG to ICO, JPG to ICO, ICO to PNG
- Added format converters: BMP to PNG, SVG to PNG, PNG to WEBP, JPG to WEBP, PNG to SVG
- Added professional converters: HEIC to JPG, TIFF to JPG, PSD to PNG, GIF to MP4
- Updated converters.html with all 17 new converter cards
- Each page features unique gradient theme, 3 ad slots, premium detection

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -520,76 +520,125 @@
                         <h3>JPG to PDF</h3>
                         <p>Convert JPG images to PDF documents</p>
                     </a>
-                    <div class="converter-card">
+                    <a href="gif-to-png.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>GIF to PNG</h3>
+                        <p>Extract GIF frames and convert to PNG format</p>
+                    </a>
+                    <a href="heif-to-png.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>HEIF to PNG</h3>
+                        <p>Convert Apple HEIF/HEIC format to PNG images</p>
+                    </a>
+                    <a href="avif-to-jpg.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>AVIF to JPG</h3>
+                        <p>Convert next-gen AVIF format to standard JPG</p>
+                    </a>
+                    <a href="tif-to-png.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
                         </div>
-                        <h3>PNG to SVG</h3>
-                        <p>Convert PNG to scalable SVG</p>
-                    </div>
-                    <div class="converter-card">
+                        <h3>TIF to PNG</h3>
+                        <p>Convert TIFF images to PNG format</p>
+                    </a>
+                    <a href="svg-to-jpg.html" class="converter-card">
                         <div class="converter-icon">
-                            <i class="fas fa-image"></i>
+                            <i class="fas fa-vector-square"></i>
                         </div>
-                        <h3>GIF to MP4</h3>
-                        <p>Convert animated GIF to video</p>
-                    </div>
-                    <div class="converter-card">
+                        <h3>SVG to JPG</h3>
+                        <p>Convert vector SVG graphics to JPG images</p>
+                    </a>
+                    <a href="png-to-ico.html" class="converter-card">
                         <div class="converter-icon">
-                            <i class="fas fa-file-image"></i>
+                            <i class="fas fa-icons"></i>
                         </div>
-                        <h3>HEIC to JPG</h3>
-                        <p>Convert iPhone photos to JPG</p>
-                    </div>
-                    <div class="converter-card">
+                        <h3>PNG to ICO</h3>
+                        <p>Create Windows ICO icons from PNG images</p>
+                    </a>
+                    <a href="jpg-to-ico.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-icons"></i>
+                        </div>
+                        <h3>JPG to ICO</h3>
+                        <p>Create Windows ICO icons from JPG photos</p>
+                    </a>
+                    <a href="bmp-to-png.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-image"></i>
                         </div>
                         <h3>BMP to PNG</h3>
-                        <p>Convert BMP to PNG format</p>
-                    </div>
-                    <div class="converter-card">
+                        <p>Convert Windows BMP images to PNG format</p>
+                    </a>
+                    <a href="ico-to-png.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-icons"></i>
+                        </div>
+                        <h3>ICO to PNG</h3>
+                        <p>Convert Windows icon files to PNG format</p>
+                    </a>
+                    <a href="svg-to-png.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-vector-square"></i>
+                        </div>
+                        <h3>SVG to PNG</h3>
+                        <p>Convert vector SVG graphics to PNG images</p>
+                    </a>
+                    <a href="png-to-webp.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3>PNG to WEBP</h3>
+                        <p>Convert PNG images to modern WEBP format</p>
+                    </a>
+                    <a href="jpg-to-webp.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3>JPG to WEBP</h3>
+                        <p>Convert JPG images to modern WEBP format</p>
+                    </a>
+                    <a href="png-to-svg.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>PNG to SVG</h3>
+                        <p>Convert PNG raster images to scalable SVG vectors</p>
+                    </a>
+                    <a href="heic-to-jpg.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>HEIC to JPG</h3>
+                        <p>Convert iPhone/Apple HEIC photos to JPG format</p>
+                    </a>
+                    <a href="tiff-to-jpg.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-file-image"></i>
                         </div>
                         <h3>TIFF to JPG</h3>
-                        <p>Convert TIFF to JPG format</p>
-                    </div>
-                    <div class="converter-card">
-                        <div class="converter-icon">
-                            <i class="fas fa-image"></i>
-                        </div>
-                        <h3>ICO to PNG</h3>
-                        <p>Convert icon files to PNG</p>
-                    </div>
-                    <div class="converter-card">
-                        <div class="converter-icon">
-                            <i class="fas fa-file-image"></i>
-                        </div>
-                        <h3>SVG to PNG</h3>
-                        <p>Convert vector SVG to PNG</p>
-                    </div>
-                    <div class="converter-card">
-                        <div class="converter-icon">
-                            <i class="fas fa-image"></i>
-                        </div>
-                        <h3>PNG to WEBP</h3>
-                        <p>Convert PNG to WEBP format</p>
-                    </div>
-                    <div class="converter-card">
-                        <div class="converter-icon">
-                            <i class="fas fa-file-image"></i>
-                        </div>
-                        <h3>JPG to WEBP</h3>
-                        <p>Convert JPG to WEBP format</p>
-                    </div>
-                    <div class="converter-card">
+                        <p>Convert TIFF images to standard JPG format</p>
+                    </a>
+                    <a href="psd-to-png.html" class="converter-card">
                         <div class="converter-icon">
                             <i class="fas fa-image"></i>
                         </div>
                         <h3>PSD to PNG</h3>
-                        <p>Convert Photoshop to PNG</p>
-                    </div>
+                        <p>Convert Photoshop PSD files to PNG format</p>
+                    </a>
+                    <a href="gif-to-mp4.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>GIF to MP4</h3>
+                        <p>Convert animated GIF to MP4 video format</p>
+                    </a>
                 </div>
             </div>
 
