Add format hub pages with breadcrumb navigation
- Created 5 format hub pages: HEIC, PNG, JPG, GIF, WEBP converters
- Each hub shows all conversion options for that format
- Added breadcrumb navigation: Home > Image Converters > Format Hub
- Included format descriptions and educational content
- Added 'Popular Format Converters' section to converters.html
- Each hub features: format badge, conversion grid, 3 ad slots
- Premium user detection hides ads
- Glassmorphism design with unique gradients per format
- Improved SEO with meta descriptions and structured content

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -471,6 +471,58 @@
                 </div>
             </div>
 
+            <!-- Format Hubs -->
+            <div class="category-section">
+                <div class="category-header">
+                    <h2>🌟 Popular Format Converters</h2>
+                    <p>Explore all conversion options for popular file formats</p>
+                </div>
+                <div class="converter-grid">
+                    <a href="heic-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <h3>HEIC Converter</h3>
+                        <p>Convert iPhone HEIC photos to any format</p>
+                    </a>
+                    <a href="png-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-image"></i>
+                        </div>
+                        <h3>PNG Converter</h3>
+                        <p>Convert PNG images with transparency</p>
+                    </a>
+                    <a href="jpg-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-image"></i>
+                        </div>
+                        <h3>JPG Converter</h3>
+                        <p>Convert JPG/JPEG photos to any format</p>
+                    </a>
+                    <a href="gif-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-film"></i>
+                        </div>
+                        <h3>GIF Converter</h3>
+                        <p>Convert GIF animations and graphics</p>
+                    </a>
+                    <a href="webp-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-images"></i>
+                        </div>
+                        <h3>WEBP Converter</h3>
+                        <p>Convert modern WEBP images</p>
+                    </a>
+                    <a href="pdf-converter.html" class="converter-card">
+                        <div class="converter-icon">
+                            <i class="fas fa-file-pdf"></i>
+                        </div>
+                        <h3>PDF Converter</h3>
+                        <p>Convert PDF documents to any format</p>
+                    </a>
+                </div>
+            </div>
+
             <!-- Image Converters -->
             <div class="category-section">
                 <div class="category-header">
