Make format selector blend seamlessly with background
- Reduced background opacity from 0.85 to 0.4 for better blending
- Softened border from 2px to 1px with lower opacity
- Reduced box shadow intensity for subtle elevation
- Made dropdown buttons semi-transparent (0.95) with backdrop blur
- Lighter border color on dropdown buttons
- More cohesive glass morphism effect throughout

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -299,12 +299,12 @@
         .format-selector {
             max-width: 900px;
             margin: 35px auto;
-            background: rgba(255, 255, 255, 0.85);
+            background: rgba(255, 255, 255, 0.4);
             backdrop-filter: blur(30px);
             border-radius: 16px;
             padding: 25px;
-            box-shadow: 0 10px 40px rgba(102, 126, 234, 0.15);
-            border: 2px solid rgba(255, 255, 255, 0.6);
+            box-shadow: 0 4px 20px rgba(102, 126, 234, 0.08);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             position: relative;
             z-index: 50;
         }
@@ -338,8 +338,8 @@
         }
         .dropdown-btn {
             width: 100%;
-            background: white;
-            border: 2px solid rgba(102, 126, 234, 0.3);
+            background: rgba(255, 255, 255, 0.95);
+            border: 2px solid rgba(102, 126, 234, 0.2);
             border-radius: 12px;
             padding: 15px 20px;
             font-size: 1rem;
@@ -352,6 +352,7 @@
             transition: all 0.3s;
             position: relative;
             z-index: 101;
+            backdrop-filter: blur(10px);
         }
         .dropdown-btn:hover {
             border-color: #667eea;
