Remove format selector background and move closer to search bar
- Removed background, border, and box-shadow from format selector
- Changed margin from 35px to 20px top for closer spacing to search bar
- Transparent background - dropdowns float freely
- Cleaner, more minimal design
- Format selector now seamlessly integrated with page

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -298,13 +298,12 @@
         /* Format Selector */
         .format-selector {
             max-width: 900px;
-            margin: 35px auto;
-            background: rgba(255, 255, 255, 0.4);
-            backdrop-filter: blur(30px);
-            border-radius: 16px;
-            padding: 25px;
-            box-shadow: 0 4px 20px rgba(102, 126, 234, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+            margin: 20px auto 35px;
+            background: transparent;
+            border-radius: 0;
+            padding: 0;
+            box-shadow: none;
+            border: none;
             position: relative;
             z-index: 50;
         }
